<resources>
    <string name="app_name">CoffeeTEK</string>
    <string name="title_CustomList">Custom List</string>
    <string name="title_Back">Back</string>
    <string name="title_Menu">Menu</string>
    <string name="title_Next">Next</string>
    <string name="title_Prefrences">Prefrences</string>
    <string name="title_Placeorder">Place Order</string>
    <string name="title_Total">Total: </string>
    <string name="title_Additions">Additions</string>
    <string name="title_Sugar">Sugar</string>
    <string name="title_Size">Size</string>
    <string name="title_count">1</string>
    <string name="Home">Home</string>
    <string name="Organic">Best Organic Coffee Beans</string>
    <string name="Notes">Notes of Chocolate and Caramel.</string>
    <string name="Rich">Rich and full-bodied.</string>
    <string name="Choose">Choose and Enjoy</string>
    <string name="Boost">Boost your day with our best Products</string>
    <string name="HotCoffee">Hot Coffee</string>
    <string name="ColdCoffee">Cold Coffee</string>
    <string name="Donut">Donut</string>
    <string name="Cookie">Cookie</string>
    <string name="title_Location">Location</string>
    <string name="title_ViewMenu">View Menu</string>
    <string name="title_CoffeeTEK">CoffeeTEK</string>
    <string name="title_distance">4,23 mi</string>
    <string name="title_time">8am - 11pm</string>
    <string name="title_address">Address</string>
    <string name="title_address1">3 Michel Bakhoum</string>
    <string name="title_address2">Dokki, Cairo</string>
    <string name="title_signup">Signup</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome Back!</string>
    <string name="profile">Profile</string>
    <string name="hint_Password">Password</string>
    <string name="dont">Dont have an account?</string>
    <string name="hint_Email">Email</string>
    <string name="hint_YourName">Your Name</string>
    <string name="hint_YourEmail">Your Email</string>
    <string name="hint_YourPhoneNumber">Your Phone Number</string>
    <string name="hint_YourPassword">Your Password</string>
    <string name="hint_YourCity">Your City</string>
    <string name="GetBest">Get the Best Coffee in Town!</string>
    <string name="Already">Already have an account?</string>
    <string name="hint_City">City</string>
    <string name="hint_PhoneNumber">Phone Number</string>
    <string name="hint_FullName">Full Name</string>
    <string name="join">Join the Coffee Crew!</string>
</resources>