<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Image above the background -->
    <ImageView
        android:id="@+id/aboveImage"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/cart"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Dots below the images -->
    <LinearLayout
        android:id="@+id/dotLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/aboveImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- First (Larger) Dot -->
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/dot"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="2dp" />

        <!-- Second Dot -->
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/doti"
            android:layout_marginEnd="2dp" />

        <!-- Third (Smaller) Dot -->
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/doti" />

    </LinearLayout>

    <!-- TextView below the dots -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GetBest"
        android:gravity="center_horizontal"
        android:textColor="@color/mustard"
        android:textSize="25sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toBottomOf="@id/dotLayout"
        android:layout_marginTop="20dp"/>
    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/dotLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <!-- Button 1 -->
        <Button
            android:id="@+id/signupbtnn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/title_signup"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/mustard"
            android:fontFamily="@font/raleway_bold"/>

        <!-- Button 2 -->
        <Button
            android:id="@+id/loginbtnn"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/mustard"
            android:fontFamily="@font/raleway_bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>